--- a/QuickLook.Plugin.Metadata.config
+++ b/QuickLook.Plugin.Metadata.config
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <Metadata>
-  <Namespace>QuickLook.Plugin.HelloWorld</Namespace>
-  <Description>This plugin does nothing at all.</Description>
+  <Namespace>QuickLook.Plugin.OfficeViewer</Namespace>
+  <Description>View Word, Excel, and PowerPoint files without Office installation.</Description>
 </Metadata>
