--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "QuickLook.Common"]
 	path = QuickLook.Common
-	url = git@github.com:QL-Win/QuickLook.Common.git
+	url = https://github.com/QL-Win/QuickLook.Common.git
