--- a/QuickLook.Plugin.Metadata.Base.config
+++ b/QuickLook.Plugin.Metadata.Base.config
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <Metadata>
   <Namespace>QuickLook.Plugin.OfficeViewer</Namespace>
+  <Version>0</Version>
   <Description>View Word, Excel, and PowerPoint files without Office installation.</Description>
 </Metadata>
