--- a/QuickLook.Plugin.OfficeViewer.csproj
+++ b/QuickLook.Plugin.OfficeViewer.csproj
@@ -128,6 +128,7 @@
     <Compile Include="Plugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SyncfusionControl.cs" />
+    <None Include="QuickLook.Plugin.Metadata.Base.config" />
     <None Include="SyncfusionKey.Example.cs" />
     <Compile Include="SyncfusionKey.cs" />
   </ItemGroup>
